feat: Implementar Use Cases e Mappers - CreateStudentUseCase com validações de duplicidade - GetStudentDetailUseCase para busca por ID - UpdateStudentUseCase com validações de alteração - DeleteStudentUseCase para remoção segura - ListStudentsUseCase com paginação e busca