@@ -1,6 +1,9 @@
 package start.students.core.application.usecases;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import start.students.core.application.dtos.StudentOutputDTO;
 import start.students.core.application.dtos.StudentPagedOutputDTO;
@@ -8,49 +11,46 @@ import start.students.core.application.mappers.StudentMapper;
 import start.students.core.domain.entities.Student;
 import start.students.core.ports.StudentRepositoryPort;
 
+import java.util.stream.Collectors;
+
+@Service
+@RequiredArgsConstructor
 public class ListStudentsUseCase {
 
-    Service
-    @RequiredArgsConstructor
-    public class ListStudentsUseCase {
+    private final StudentRepositoryPort studentRepository;
+    private final StudentMapper studentMapper;
 
-        private final StudentRepositoryPort studentRepository;
-        private final StudentMapper studentMapper;
+    public StudentPagedOutputDTO execute(int page, int size, String search, String searchType) {
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Student> studentsPage;
 
-        public StudentPagedOutputDTO execute(int page, int size, String search, String searchType) {
-            page = Math.max(0, page - 1);
-
-            List<Student> students;
-            long totalElements;
-
-            if (search != null && !search.isBlank()) {
-                if ("matricula".equalsIgnoreCase(searchType)) {
-                    students = studentRepository.searchByMatricula(search, page, size);
-                } else {
-                    students = studentRepository.searchByName(search, page, size);
-                }
-                totalElements = students.size();
-            } else {
-                students = studentRepository.findAll(page, size);
-                totalElements = studentRepository.count();
+        if (search == null || search.trim().isEmpty()) {
+            studentsPage = studentRepository.findAll(pageable);
+        } else {
+            switch (searchType.toLowerCase()) {
+                case "cpf":
+                    studentsPage = studentRepository.findByCpfContaining(search, pageable);
+                    break;
+                case "email":
+                    studentsPage = studentRepository.findByEmailContainingIgnoreCase(search, pageable);
+                    break;
+                case "name":
+                default:
+                    studentsPage = studentRepository.findByNameContainingIgnoreCase(search, pageable);
+                    break;
             }
-
-            List<StudentOutputDTO> content = students.stream()
-                    .filter(s -> !s.estaDeleted())
-                    .map(studentMapper::toOutputDTO)
-                    .toList();
-
-            int totalPages = (int) Math.ceil((double) totalElements / size);
-
-            return StudentPagedOutputDTO.builder()
-                    .content(content)
-                    .pageNumber(page + 1)
-                    .pageSize(size)
-                    .totalElements(totalElements)
-                    .totalPages(totalPages)
-                    .hasNext(page + 1 < totalPages)
-                    .hasPrevious(page > 0)
-                    .build();
         }
+
+        return StudentPagedOutputDTO.builder()
+                .content(studentsPage.getContent().stream()
+                        .map(studentMapper::toOutputDTO)
+                        .collect(Collectors.toList()))
+                .page(studentsPage.getNumber())
+                .size(studentsPage.getSize())
+                .totalElements(studentsPage.getTotalElements())
+                .totalPages(studentsPage.getTotalPages())
+                .first(studentsPage.isFirst())
+                .last(studentsPage.isLast())
+                .build();
     }
 }
